# rust_practice

./: Cargo.toml  README.md
.cargo/: config.toml
.github/: CODEOWNERS
aoc_24/: Cargo.toml  README.md
aoc_24/src/: day_01.rs  day_02.rs  error.rs  lib.rs
aoc_25/: Cargo.toml  README.md
aoc_25/src/: day_01.rs  day_02.rs  day_03.rs  day_04.rs  day_05.rs  day_06.rs  day_07.rs  day_08.rs  day_09.rs  error.rs  lib.rs
aoc_runner/: Cargo.toml
aoc_runner/src/: main.rs
test-resources/: sample_file_one_line.txt
utils/: Cargo.toml
utils/src/: lib.rs
