[workspace]
resolver = "2"

members = [
    "aoc_runner",
    "aoc_24",
    "utils"
]

[workspace.lints.clippy]
unwrap_used = "deny"

[workspace.dependencies]
disjoint = "0.8.0"
itertools = "0.13.0"
once_cell = "1.21.3"
phf = { version = "0.11", features = ["macros"] }
regex = "1.11.1"
thiserror = "2.0.4"
